--- a/fireworks.html
+++ b/fireworks.html
@@ -41,7 +41,7 @@
     position: absolute;
     text-align: center;
     top: 0;
-    height: 60%;
+    height: 55%;
     width:100%;
     }
 
@@ -100,118 +100,113 @@
         }
 
         class Firework {
-        constructor(startX, startY, targetX, targetY, color, message) {
-            this.startX = startX;
-            this.startY = startY;
-            this.targetX = targetX;
-            this.targetY = targetY;
-            this.color = color;
-            this.particles = [];
-            this.progress = 0;
-            this.speed = 0.05;
-            this.angle = Math.atan2(targetY - startY, targetX - startX);
-            this.distanceToTarget = Math.sqrt((targetX - startX) ** 2 + (targetY - startY) ** 2);
-            this.distanceTraveled = 0;
-            this.message = message;
-        }
-
-        createParticles() {
-            for (let i = 0; i < 5; i++) {
-            const angle = Math.random() * Math.PI * 2;
-            const speed = Math.random() * 1.5 + 1;
-            this.particles.push(new Particle(this.targetX, this.targetY, this.color, speed, angle));
+            constructor(startX, startY, targetX, targetY, color, message) {
+                this.startX = startX;
+                this.startY = startY;
+                this.targetX = targetX;
+                this.targetY = targetY;
+                this.color = color;
+                this.particles = [];
+                this.progress = 0;
+                this.speed = 0.05;
+                this.angle = Math.atan2(targetY - startY, targetX - startX);
+                this.distanceToTarget = Math.sqrt((targetX - startX) ** 2 + (targetY - startY) ** 2);
+                this.distanceTraveled = 0;
+                this.message = message;
+                this.createdAt = Date.now(); // Add createdAt property to store the creation time
             }
-        }
+        
 
-        update() {
-            this.distanceTraveled = this.progress * this.distanceToTarget;
-            if (this.distanceTraveled >= this.distanceToTarget) {
-            this.createParticles();
-            this.particles.forEach((particle, index) => {
-                particle.update();
-                if (particle.alpha <= 0) {
-                this.particles.splice(index, 1);
+            createParticles() {
+                if (Date.now() - this.createdAt <= 3000) {
+                    for (let i = 0; i < 5; i++) {
+                    const angle = Math.random() * Math.PI * 2;
+                    const speed = Math.random() * 1.5 + 1;
+                    this.particles.push(new Particle(this.targetX, this.targetY, this.color, speed, angle));
+                    }
                 }
-            });
-            } else {
-            this.progress += this.speed;
-            this.x = this.startX + (this.targetX - this.startX) * this.progress;
-            this.y = this.startY + (this.targetY - this.startY) * this.progress - 0.5 * 9.81 * (this.progress ** 2);
-            this.draw();
             }
-            if (this.message) {
-            ctx.font = "30px Arial narrow"; 
-            ctx.fillStyle = this.color;
-            ctx.fillText(this.message, canvas.width / 2 - 130, canvas.height * 2 / 3);
-            }
-        }
 
-        draw() {
-            ctx.globalAlpha = 1;
-            ctx.fillStyle = this.color;
-            ctx.beginPath();
-            ctx.arc(this.x, this.y, 1, 0, Math.PI * 2); // Reduce the size of the firework launcher
-            ctx.fill();
-        }
+            update() {
+                this.distanceTraveled = this.progress * this.distanceToTarget;
+                if (this.distanceTraveled >= this.distanceToTarget) {
+                this.createParticles();
+                this.particles.forEach((particle, index) => {
+                    particle.update();
+                    if (particle.alpha <= 0) {
+                    this.particles.splice(index, 1);
+                    }
+                });
+                } else {
+                this.progress += this.speed;
+                this.x = this.startX + (this.targetX - this.startX) * this.progress;
+                this.y = this.startY + (this.targetY - this.startY) * this.progress - 0.5 * 9.81 * (this.progress ** 2);
+                this.draw();
+                }
+                if (this.message) {
+                ctx.font = "30px Arial narrow"; 
+                ctx.fillStyle = "Moccasin";
+                ctx.fillText(this.message, canvas.width / 2 - 130, canvas.height * 2 / 3);
+                }
+            }
+
+            draw() {
+                ctx.globalAlpha = 1;
+                ctx.fillStyle = this.color;
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, 1, 0, Math.PI * 2); // Reduce the size of the firework launcher
+                ctx.fill();
+            }
         }
 
         function createFireworks() {
         const colors = ["violet", "indigo", "Moccasin"]; //"blue", "green", "yellow", "orange", "red"
         const angleStep = (Math.PI * 2) / 20;
 
-        for (let i = 0; i < 20; i++) { // Reduce the number of particles generated
+        for (let i = 0; i < 15; i++) { // Reduce the number of particles generated
             const color = colors[i % colors.length];
             const startX = canvas.width / 2;
             const startY = canvas.height * (9 / 10);
             const targetX = canvas.width / 2 + Math.cos(angleStep * i) * (150 + Math.random() * 200);
             const targetY = canvas.height * (3 / 10) + Math.sin(angleStep * i) * (150 + Math.random() * 50);
+            const timeout = 2000 + Math.random() * 3000; // Change this line to control the duration of individual fireworks
 
             setTimeout(() => {
-            fireworks.push(new Firework(startX, startY, targetX, targetY, color));
-            if (i === 5) {
-                fireworks.push(new Firework(startX, startY, targetX, targetY, "Moccasin", "Lyn, Happy Birthday!"));
-                }
-                }, i * (300 + Math.random() * 1000)); // Increase the multiplier here (e.g., from 150 to 300)
-            }
+                const message = (i === 12) ? "Lyn, Happy Birthday!" : null; // Add a message for the last firework
+                fireworks.push(new Firework(startX, startY, targetX, targetY, color, message)); // Include the message
+            }, i * (300 + Math.random() * 1000)); // Increase the multiplier here (e.g., from 150 to 300)
         }
+    }
 
-        //let animationId;
 
         function animate() {
+            const now = Date.now();
+
             ctx.globalAlpha = 1;
             ctx.fillStyle = "rgba(0, 0, 0, 0.08)";  //0.05
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
             fireworks.forEach((firework, index) => {
+                if (now - firework.createdAt >= firework.timeout) {
+                    fireworks.splice(index, 1);
+                    return;
+                }
+
                 firework.update();
                 firework.particles.forEach((particle, pIndex) => {
                     if (particle.lifetime <= 0) {
                         firework.particles.splice(pIndex, 1);
                     }
                 });
-
-                if (firework.particles.length === 0 && firework.distanceTraveled >= firework.distanceToTarget) {
-                setTimeout(() => {
-                    fireworks.splice(index, 1);
-                }, 3000); // 3 seconds delay for each firework to disappear
-                }
             });
 
-            animationId = requestAnimationFrame(animate);
+            requestAnimationFrame(animate);
+
             }
 
-        //let isAnimating = false; // Add a flag to check if the animation is running
-
         wishButton.addEventListener("click", () => {
-        //if (isAnimating) return; // Prevent running multiple animations simultaneously
-        //isAnimating = true; // Set the flag to indicate the animation is running
         createFireworks();
         animate();
-        //setTimeout(() => {
-        //    cancelAnimationFrame(animationId);
-        //    ctx.clearRect(0, 0, canvas.width, canvas.height);
-        //    isAnimating = false; // Reset the flag after the animation is complete
-        //}, 14000); // 8 seconds timeout
         });
     </script>
 </body>
