--- a/index.html
+++ b/index.html
@@ -25,16 +25,25 @@
             <main class="site-home-main">
                 <div id="start" class="site-home-content">
                     <div class="namecard">            
-                        <h1 class="site-title"> Zhiyin Tan </h1>
-                        <p> Written as <span lang="ch">谭芷茵</span> </p>
-                        <p> Pronounced close to "Ginn Tan" </p>
+                        <h1 class="site-title"> Zhiyin Tan  </h1>
+                        <p> written as <span lang="ch">谭芷茵</span> in Chinese, pronounced [ʤiːn tæn] in Mandarin and [d͡zi:jɐn] in Cantonese </p>
                     </div>
                     <div class="intro">  
-                        <p> I'm a M.Sc. student in 
+                        <p> Before graduate as a M.Sc. student in 
                             <a href="https://www.ims.uni-stuttgart.de/en/">Institute for Natural Language Processing</a> 
                             at 
                             <a href="https://www.uni-stuttgart.de/en/">University of Stuttgart</a> in Germany,
                             focusing on problems in <em>contextualisation</em> of <strong>Natural Language Processing</strong>.
+                            
+                            Before graduating as a Master of Science student at the 
+                            <a href="https://www.ims.uni-stuttgart.de/en/">Institute for Natural Language Processing 
+                            at the 
+                            <a href="https://www.uni-stuttgart.de/en/">University of Stuttgart in Germany, 
+                            I obtained a Master of Arts degree in the field of Chinese Linguistics at the 
+                            <a href="https://fah.um.edu.mo/department-of-chinese-language-and-literature/programmes/">University of Macau 
+                            in Macau (a special administrative region of China). 
+                            Prior to that, I received a Bachelor of Arts in Chinese Language and Literature from 
+                            <a href="https://www.wyu.edu.cn/"> Wuyi University in China.
                             Currently, I am working on ...
                         </p>
                     </div>
