--- a/knowledgebase/computational_linguistics.html
+++ b/knowledgebase/computational_linguistics.html
@@ -25,6 +25,11 @@
             <main class="site-kg-main">
                 <div id="start" class="site-kg-content">
                     <h1 class="site-title"> Computational Linguistics </h1>
+                    <div class="regularization">
+                        <h3>Regularization</h3>
+                        <p></p>
+                    </div>
+                    
                 </div>
                 <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 20%;width: 50px;opacity: 0.8;margin-right: 5px;">
                     <a href="#start">
