--- a/fairyland.html
+++ b/fairyland.html
@@ -19,14 +19,14 @@
     </head>
 
     <body class="site-fl">
-        <header data-include="./navigation.html"></header>
+        <header data-include="./tool/navigation.html"></header>
 
         <div class="container">
             <main class="site-fl-main">
                 <div id="start" class="site-fl-content">          
                     <h1 class="site-title"> Fairyland </h1>
                         <p>Make a wish   
-                            <a class="card-title" href="fireworks.html">here</a>
+                            <a class="card-title" href="/fairyland/fireworks.html">here</a>
                             , you lovely one.
                         </p>
                 </div>
@@ -37,7 +37,7 @@
                 </div>
             </main>
             
-            <footer data-include="../footer.html"></footer>
+            <footer data-include="./tool/footer.html"></footer>
         </div>
 
   </body>
