--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
 
     <body class="site-home">
-        <header data-include="./navigation.html"></header>
+        <header data-include="./tool/navigation.html"></header>
 
         <div class="container">
             <main class="site-home-main">
@@ -29,7 +29,7 @@
                     <div class="namecard">            
                         <h1 class="site-title"> Tan, Zhiyin </h1>
                         <p> written as <span lang="ch">谭芷茵</span> in Chinese, 
-                            <br><br> pronounced /tæn/ /dʒiː/ /jɪːn/ in Mandarin and /tam/ /dzi:/ /jɐn/ in Cantonese </p>
+                            <br><br> pronounced /tæn/ /dʒiː/ /jɪːn/ in Mandarin, /tam/ /dzi:/ /jɐn/ in Cantonese </p>
                     </div>
 
                     <div class="intro">  
@@ -46,7 +46,7 @@
                             <a href="https://www.wyu.edu.cn/">Wuyi University</a> in China.
                         </p>
                     </div>
-                    
+
                 </div>
 
                 <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 20%;width: 50px;opacity: 0.8;margin-right: 5px;">
@@ -56,7 +56,7 @@
                 </div>      
             </main>
             
-            <footer data-include="./footer.html"></footer>
+            <footer data-include="./tool/footer.html"></footer>
         </div> 
     </body>
 </html>
