--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     </head>
 
     <body class="site-ab">
-        <header data-include="navigation.html"></header>
+        <header data-include="./tool/navigation.html"></header>
 
         <div class="container">
             <main class="site-ab-main">
@@ -40,7 +40,7 @@
                 </div>
             </main>
             
-            <footer data-include="./footer.html"></footer>
+            <footer data-include="./tool/footer.html"></footer>
         </div>
 
   </body>
