--- a/fairyland/fireworks.html
+++ b/fairyland/fireworks.html
@@ -7,7 +7,7 @@
   <style>
     body {
     margin: 0;
-    background-image: url("background_dark.png");
+    background-image: url("background_four_girl.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
