--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -19,7 +19,7 @@
   </head>
 
   <body class="site-kb">
-    <header data-include="./navigation.html"></header>
+    <header data-include="./tool/navigation.html"></header>
 
     <div class="container">
         <main class="site-kg-main">
@@ -79,7 +79,7 @@
             </div>
         </main>
 
-        <footer data-include="./footer.html"></footer>
+        <footer data-include="./tool/footer.html"></footer>
     </div>
   </body>
 </html>
