--- a/knowledgebase/computational_linguistics.html
+++ b/knowledgebase/computational_linguistics.html
@@ -19,7 +19,7 @@
     </head>
 
     <body class="site-home">  
-        <header data-include="../navigation.html"></header>
+        <header data-include="../tool/navigation.html"></header>
 
         <div class="container">
             <main class="site-kg-main">
@@ -38,7 +38,7 @@
                 </div> 
             </main>
 
-            <footer data-include="../footer.html"></footer>
+            <footer data-include="../tool/footer.html"></footer>
         </div>
     </body>
 </html>
