--- a/tool/navigation.html
+++ b/tool/navigation.html
@@ -2,34 +2,55 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="../css/tool.css">
     </head>
 
-    <body id="header" class="site-home-header">
-        <nav class="site-nav-three" id="navbarResponsive" style="float:left">
+    <body id="header" class="site-home-header" 
+        style="
+            width: 100%; height: inherit;  
+            padding: 0; margin: 0;">
+
+        <nav id="navbar_Responsive" 
+            style="
+                width: inherit; height: 2.5em;
+                background-color: rgb(0, 0, 0);
+                align-items: center;
+                float: left; display: flex; 
+                flex-flow: row wrap; 
+                padding: 0.2em 0em 0.4em 0em; margin: 0;">
             
-            <div class="nav-logo"  role="menu-item">
-                <a href="/index.html" class="menu" title="Home Page">
-                    <img class="logo" src="/pic/logo.ico">
+            <div role="menu-item" 
+                style="
+                    min-width: 4rem;
+                    align-items: center;
+                    padding: 0em 3% 0em 1em; margin-top: 0;">
+
+                <a href="../index.html" class="menu" title="Home Page">
+                    <img class="logo" style="height: 25px;" src="../pic/logo.ico">
                 </a>
             </div>
 
-            <ul class="nav" role="menu">
+            <ul class="nav" role="menu" 
+                style="
+                    flex: 2;  white-space: nowrap;
+                    overflow: hidden; overflow-x: auto;
+                    padding: 0; margin: 0.2em 0em 0em 0em;">
+
                 <li class="nav-about" role="menu-item">
-                    <a href="/about.html" class="menu">About</a>
+                    <a href="../about.html" class="menu">About</a>
                 </li>
                 <li class="nav-knowledge-base" role="menu-item">
-                    <a href="/knowledgebase.html" class="menu">Knowledge Base</a>
+                    <a href="../knowledgebase.html" class="menu">Knowledge Base</a>
                 </li>
                 <li class="nav-fairyland" role="menu-item">
-                    <a href="/fairyland.html" class="menu">Fairyland</a>
+                    <a href="../fairyland.html" class="menu">Fairyland</a>
                 </li>
             </ul>
             
             <ul class="nav-social">
                 <li class="nav-social-github">
                     <a href="https://github.com/zhiyin121/" title="Github">
-                        <img class="icon" src="/pic/github_icon.ico" alt="github link">
+                        <img class="icon" src="../pic/github_icon.ico" alt="github link">
                     </a>
                 </li>
             </ul>
