update personal intro

--- a/index.html
+++ b/index.html
@@ -25,28 +25,45 @@
             <main class="site-home-main">
 
                 <div id="start" class="site-home-content">
-
-                    <div class="namecard">            
-                        <h1 class="site-title"> Tan, Zhiyin </h1>
-                        <p> written as <span lang="ch">谭芷茵</span> in Chinese, 
-                            <br><br> pronounced /tæn/ /dʒiː/ /jɪːn/ in Mandarin, /tam/ /dzi:/ /jɐn/ in Cantonese </p>
-                    </div>
+                    <ul style="display: grid; grid-template-columns:repeat(auto-fill, minmax(8em, 1fr)); gap: 1.5em;
+                                 padding: 0 10em 0 0;  margin: 0;">
+                        <li>
+                            <img class="avatar" title="Linkedin" src="./pic/avatar_square.png" 
+                            style="min-width: 5em; max-width: 8em;">
+                        </li>
+                        <li style="min-width: 250px;">
+                            <div class="namecard">            
+                                <h1 class="site-title"> Tan, Zhiyin </h1>
+                                <p>Computational Linguist</p>
+                                <p>[first name]121[at]gmail.com</p>
+                            </div>
+                        </li>
+                    </ul>
 
                     <div class="intro">  
                         <p> 
-                            Before obtaining the M.Sc. degree in Computational Linguistics at the 
-                            <a href="https://www.ims.uni-stuttgart.de/en/">Institute of Natural Language Processing</a> 
+                            Before obtaining the M.Sc. degree in Computational Linguistics supervised by 
+                            <a href="https://nlpado.de/~sebastian/">Prof. Sebastian Padó</a>
+                             at the 
+                            <a href="https://www.ims.uni-stuttgart.de/en/">Institute of Natural Language Processing (IMS)</a> 
                             of the University of Stuttgart, Germany,
 
-                            I graduated with a M.A. degree in the field of Chinese Linguistics at the 
+                            I graduated with an M.A. in Chinese Linguistics and my thesis was on sociolinguistics, supervised by 
+                            <a href="https://www.semanticscholar.org/author/Daming-Xu/49718650">Prof. Daming Xu</a>
+                            at the 
                             <a href="https://fah.um.edu.mo/department-of-chinese-language-and-literature/programmes/">Faculty of Arts and Humanities</a>
-                            of the University of Macau (a special administrative region of China). 
+                            of the University of Macau. 
                             
                             Prior to that, I received a B.A. in Chinese Language and Literature from 
                             <a href="https://www.wyu.edu.cn/">Wuyi University</a> in China.
                         </p>
+                        <p>
+                            My name written as <span lang="ch">谭芷茵</span> in Chinese, pronounced /tæn/ /dʒiː/ /jɪːn/ in Mandarin, 
+                            /tam/ /dzi:/ /jɐn/ in Cantonese.
+                        </p>
                     </div>
 
+                    
                 </div>
 
                 <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 20%;width: 50px;opacity: 0.8;margin-right: 5px;">
