update research page

--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -15,6 +15,7 @@
     <link rel="Shortcut Icon" href="./pic/little_fox_round.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/knowledge_base.css">
     <script src="./js/csi.js" defer></script>
   </head>
 
