--- a/research.html
+++ b/research.html
@@ -15,23 +15,41 @@
         <link rel="Shortcut Icon" href="./pic/little_fox_round.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="./css/research.css">
         <script src="./js/csi.js" defer></script>
     </head>
 
-    <body class="site-ab">
+    <body class="site-re">
         <header data-include="./tool/navigation.html"></header>
 
         <div class="container">
-            <main class="site-ab-main">
-                <div id="start" class="site-ab-content">          
-                    <h1 class="site-title"> About Me </h1>
-                    <p>My resume is available 
-                        <a href="https://www.visualcv.com/zhiyin_cv/"
-                        title="Curriculum Vitae">here</a>
-                    </p>
-                    <p> . </p>
-                    <p> . </p>
-                    <p> . </p>
+            <main class="site-re-main">
+                <div id="start" class="site-re-content">          
+                    <h1 class="site-title"> Research </h1>
+                    <div class="research-card">
+                        <div class="card">
+                            <div class="card-cover-title">
+                                <h4> To be filled in </h4>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-cover-title">
+                                <h4> To be filled in </h4>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-cover-title">
+                                <h4> To be filled in </h4>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
                 </div>
                 <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 20%;width: 50px;opacity: 0.8;margin-right: 5px;">
                     <a href="#start">
