--- a/tool/navigation.html
+++ b/tool/navigation.html
@@ -37,7 +37,7 @@
                     padding: 0; margin: 0.2em 0em 0em 0em;">
 
                 <li class="nav-about" role="menu-item">
-                    <a href="../about.html" class="menu">About</a>
+                    <a href="../research.html" class="menu">Research</a>
                 </li>
                 <li class="nav-knowledge-base" role="menu-item">
                     <a href="../knowledgebase.html" class="menu">Knowledge Base</a>
