--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
                     <ul style="display: grid; grid-template-columns:repeat(auto-fill, minmax(8em, 1fr)); gap: 1.5em;
                                  padding: 0 10em 0 0;  margin: 0;">
                         <li>
-                            <img class="avatar" title="Linkedin" src="./pic/avatar_square.png" 
+                            <img class="avatar" title="avatar" src="./pic/avatar_square.png" 
                             style="min-width: 5em; max-width: 8em;">
                         </li>
                         <li style="min-width: 250px;">
-                            <div class="namecard">            
+                            <div class="namecard">    
+                                <p>M.Sc. M.A.</p>        
                                 <h1 class="site-title"> Tan, Zhiyin </h1>
                                 <p>Computational Linguist</p>
                                 <p>[first name]121[at]gmail.com</p>
@@ -60,6 +61,9 @@
                         <p>
                             My name written as <span lang="ch">谭芷茵</span> in Chinese, pronounced /tæn/ /dʒiː/ /jɪːn/ in Mandarin, 
                             /tam/ /dzi:/ /jɐn/ in Cantonese.
+                        </p>
+                        <p>
+                            <a href="https://www.visualcv.com/zhiyin_cv/" style="text-decoration: underline;">CV (PDF)</a>
                         </p>
                     </div>
 
