rivese page width

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                         </li>
                     </ul>
 
-                    <div class="intro">  
+                    <div class="intro" style="
+                    text-align: left; line-height: 1.5em; max-width: 50em;">  
                         <p> 
                             Before obtaining the M.Sc. degree in Computational Linguistics supervised by 
                             <a href="https://nlpado.de/~sebastian/">Prof. Sebastian Padó</a>
