--- a/fairyland.html
+++ b/fairyland.html
@@ -30,6 +30,12 @@
                             , you lovely one.
                         </p>
                 </div>
+
+                <div class="tree-house" style="display: flex; align-items: center; justify-content: center;">
+                    <img class="tree-house-pic" title="tree house" src="./pic/tree_house_1.png" 
+                            style="width: 100%; min-width: 800px;">
+                </div>
+
                 <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 20%;width: 50px;opacity: 0.8;margin-right: 5px;">
                     <a href="#start">
                         <img class="to-top" src="./pic/top-arrow_square.ico">
