--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <div id="start" class="site-home-content">
                     <ul style="display: grid; grid-template-columns:repeat(auto-fill, minmax(8em, 1fr)); gap: 1.5em;
-                                 padding: 0 10em 0 0;  margin: 0;">
+                                 padding: 2vw 10em 0 0; margin: 0;">
                         <li>
                             <img class="avatar" title="avatar" src="./pic/avatar_square.png" 
                             style="min-width: 5em; max-width: 8em;">
