add chinese index page

--- a/index.html
+++ b/index.html
@@ -66,12 +66,20 @@
                         <p>
                             <a href="https://www.visualcv.com/zhiyin_cv/" style="text-decoration: underline;">CV (PDF)</a>
                         </p>
+                        <p>
+                            <a href="./index.html" style="text-decoration: underline;">English</a>
+                            /
+                            <a href="./zho/index_cmn.html" style="text-decoration: underline;">简</a>
+                            /
+                            <a href="./zho/index_yue.html" style="text-decoration: underline;">繁</a>
+                        </p>
                     </div>
 
                     
                 </div>
 
-                <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 20%;width: 50px;opacity: 0.8;margin-right: 5px;">
+                <div style="display:block; z-index: 1000; position: fixed;
+                    right: 5vw;bottom: 20%; opacity: 0.8; margin: 0;">
                     <a href="#start">
                         <img class="to-top" src="./pic/top-arrow_square.ico">
                     </a>
