revised link in chinese page

--- a/zho/tool/navigation_zho.html
+++ b/zho/tool/navigation_zho.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/tool.css">
+        <link rel="stylesheet" href="../../css/tool.css">
     </head>
 
     <body id="header" class="site-home-header" 
@@ -25,8 +25,8 @@
                     align-items: center;
                     padding: 0em 3% 0em 1em; margin-top: 0;">
 
-                <a href="../index.html" class="menu" title="Home Page">
-                    <img class="logo" style="height: 25px;" src="../pic/logo.ico">
+                <a href="../index_cmn.html" class="menu" title="Home Page">
+                    <img class="logo" style="height: 25px;" src="../../pic/logo.ico">
                 </a>
             </div>
 
@@ -37,20 +37,20 @@
                     padding: 0; margin: 0.2em 0em 0em 0em;">
 
                 <li class="nav-about" role="menu-item">
-                    <a href=".../research.html" class="menu">科研</a>
+                    <a href="../../research.html" class="menu">科研</a>
                 </li>
                 <li class="nav-knowledge-base" role="menu-item">
-                    <a href=".../knowledgebase.html" class="menu">知识库</a>
+                    <a href="../../knowledgebase.html" class="menu">知识库</a>
                 </li>
                 <li class="nav-fairyland" role="menu-item">
-                    <a href=".../fairyland.html" class="menu">百草园</a>
+                    <a href="../../fairyland.html" class="menu">百草园</a>
                 </li>
             </ul>
             
             <ul class="nav-social">
                 <li class="nav-social-github">
                     <a href="https://github.com/zhiyin121/" title="Github">
-                        <img class="icon" src="../pic/github_icon.ico" alt="github link">
+                        <img class="icon" src="../../pic/github_icon.ico" alt="github link">
                     </a>
                 </li>
             </ul>
