--- a/zho/tool/footer_zho.html
+++ b/zho/tool/footer_zho.html
@@ -7,19 +7,19 @@
             <li class="contact-email">
                 <a class="email" href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
                 <img class="contact-icon" src="../pic/gmail_icon.ico" alt="gmail link"> 
-                <p class="text-email">  Email </p> 
+                <p class="text-email"> 邮件 </p> 
                 </a>
             </li>
             <li class="contact-twitter">
                 <a class="twitter" href="https://twitter.com/zhiyin_nlp" title="Twitter">
                 <img class="contact-icon" src="../pic/twitter_round.ico" alt="twitter link">
-                <p class="text-twitter"> Twitter </p>
+                <p class="text-twitter"> 推特 </p>
                 </a>
             </li>
             <li class="contact-linkedin">
                 <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
                 <img class="contact-icon" src="../pic/linkedin.ico" alt="linkedin link">
-                <p class="text-linkedin"> Linkedin </p>
+                <p class="text-linkedin"> 领英 </p>
                 </a>
             </li>
         </ul>
