add a shy bunny

--- a/zho/tool/navigation_zho.html
+++ b/zho/tool/navigation_zho.html
@@ -25,7 +25,7 @@
                     align-items: center;
                     padding: 0em 3% 0em 1em; margin-top: 0;">
 
-                <a href="../index_cmn.html" class="menu" title="Home Page">
+                <a href="../../index.html" class="menu" title="Home Page">
                     <img class="logo" style="height: 25px;" src="../../pic/logo.ico">
                 </a>
             </div>
