--- a/zho/tool/footer_zho.html
+++ b/zho/tool/footer_zho.html
@@ -1,24 +1,24 @@
 <footer class="site-home-footer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/tool.css">
+    <link rel="stylesheet" href="../../css/tool.css">
     <div class="copyright-contact">
         <p class="copyright"> Copyright © 2023. <br><br> All rights reserved.</p>
         <ul class="footer-contact">
             <li class="contact-email">
                 <a class="email" href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
-                <img class="contact-icon" src="../pic/gmail_icon.ico" alt="gmail link"> 
+                <img class="contact-icon" src="../../pic/gmail_icon.ico" alt="gmail link"> 
                 <p class="text-email"> 邮件 </p> 
                 </a>
             </li>
             <li class="contact-twitter">
                 <a class="twitter" href="https://twitter.com/zhiyin_nlp" title="Twitter">
-                <img class="contact-icon" src="../pic/twitter_round.ico" alt="twitter link">
+                <img class="contact-icon" src="../../pic/twitter_round.ico" alt="twitter link">
                 <p class="text-twitter"> 推特 </p>
                 </a>
             </li>
             <li class="contact-linkedin">
                 <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
-                <img class="contact-icon" src="../pic/linkedin.ico" alt="linkedin link">
+                <img class="contact-icon" src="../../pic/linkedin.ico" alt="linkedin link">
                 <p class="text-linkedin"> 领英 </p>
                 </a>
             </li>
