--- a/fairyland.html
+++ b/fairyland.html
@@ -25,9 +25,10 @@
             <main class="site-fl-main">
                 <div id="start" class="site-fl-content">          
                     <h1 class="site-title"> Fairyland </h1>
-                        <p style="line-height: 1.6em;">Doors and windows conceal mysteries
-                            <br>
-                            Creatures knocking on the silent things
+                        <p style="line-height: 1.6em;">
+                            Knock unveils delight,<br>
+                            In whispers, dreams ignite,<br>
+                            Nooks cradle stories, bright.
                         </p>
                 </div>
 
