--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <title>Zhiyin's Intro</title>
+        <title>Zhiyin's Research</title>
         <meta name="author" content="Zhiyin Tan">
         <meta name="description" content="Personal fairyland: animation, thoughts">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
