rivised seventh floor

--- a/fairyland.html
+++ b/fairyland.html
@@ -96,7 +96,7 @@
                             </script>
                         </div>
 
-                        <!--6th floor right 1st window-->
+                        <!--6th floor right 1st window / 7th floor-->
                         <div>
                             <style>
                                 #sixth-floor-right-1-window-close:hover,
@@ -120,7 +120,7 @@
 
                             <script>
                                 function redirectToGallery() {
-                                    window.location.href = "./fairyland/fireworks.html"; // Replace with your URL
+                                    window.location.href = "./fairyland/gallery.html"; // Replace with your URL
                                 }
 
                                 function openSixRightWindow() {
